--- a/CsharpSlam/VrepSimpleTest/Properties/Resources.resx
+++ b/CsharpSlam/VrepSimpleTest/Properties/Resources.resx
@@ -114,4 +114,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Reconnect" xml:space="preserve">
+    <value>Reconnect</value>
+  </data>
+  <data name="Disconnect" xml:space="preserve">
+    <value>Disconnect</value>
+  </data>
+  <data name="ErrorMessage_DLL" xml:space="preserve">
+    <value>remoteApi.dll missing</value>
+  </data>
+  <data name="neobotix0" xml:space="preserve">
+    <value>neobotix#0</value>
+  </data>
+  <data name="neobotix1" xml:space="preserve">
+    <value>neobotix#1</value>
+  </data>
+  <data name="measuredData0" xml:space="preserve">
+    <value>measuredDataAtThisTime0</value>
+  </data>
+  <data name="wheelLeft0" xml:space="preserve">
+    <value>wheel_left#0</value>
+  </data>
+  <data name="wheelRight0" xml:space="preserve">
+    <value>wheel_right#0</value>
+  </data>
+  <data name="SICKS300" xml:space="preserve">
+    <value>SICK_S300_fast#0</value>
+  </data>
+  <data name="localhost" xml:space="preserve">
+    <value>127.0.0.1</value>
+  </data>
 </root>
